--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.4.47",
+    "axios": "^1.7.2",
     "vue-router": "^4.3.2"
   }
 }
