--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-plugin-babel": "^5.0.8",
     "css-loader": "^7.1.1",
     "dotenv-webpack": "^8.1.0",
+    "file-loader": "^6.2.0",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
     "vue": "^3.4.27",
